arreglo de botón de perfil

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -17,10 +17,10 @@
             <div  id="result-autor"> </div>
             <div  id="result-album"> </div>
         </div>  
-        <article>Perfil
-            <a href=".\vistaperfil.html">
-                <img src="../Statics/media/imgs/logoTuneSix.png" class="logoTuneSix">      <!--Logo que lleva a perfil-->
-            </a>
+        <article title="Perfil">
+                <a href=".\vistaperfil.html">
+                    <img src="../Statics/media/imgs/logoTuneSix.png" class="logoTuneSix">      <!--Logo que lleva a perfil-->
+                </a>              
         </article>
     </div> 
     <div class="contenedorGrandote">
