--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -83,7 +83,9 @@
                         </div> 
                     </div>
                 </div>
-                <br>
+                <div id="colaRep">
+                    
+                </div>
                 <div class="cuadroMixes" id="contenedorMixesOcultar"> <!--contenedor que incluye las tres recomendaciones principales-->
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
