--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -895,3 +895,9 @@ body{
     gap: 10px;
     justify-content: center;
 }
+#colaRep{
+  width: 100%;
+  height: 200px;
+  border: 3px solid white;
+  border-radius: 20px;
+}
