En el menu desplegable, boton de creditos

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -34,32 +34,39 @@
                     </div>
                 </div>
                 <div class="menu-desplegable" id="menuDesplegable">
-                <div class="menu-item">
-                    <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionInicio')">
-                        <i class="fas fa-home"></i>
-                        <span>Inicio</span>
+                    <div class="menu-item">
+                        <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionInicio')">
+                            <i class="fas fa-home"></i>
+                         <span>Inicio</span>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-item">
-                    <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionArtistas')">
-                        <i class="fas fa-user"></i>
-                        <span>Artistas</span>
+                    <div class="menu-item">
+                        <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionArtistas')">
+                            <i class="fas fa-user"></i>
+                            <span>Artistas</span>
+                         </div>
                     </div>
-                </div>
-                <div class="menu-item">
-                    <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionCanciones')">
-                        <i class="fas fa-music"></i>
-                        <span>Canciones</span>
+                    <div class="menu-item">
+                        <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionCanciones')">
+                            <i class="fas fa-music"></i>
+                            <span>Canciones</span>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-item">
-                    <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionAlbumes')">
-                        <i class="fas fa-compact-disc"></i>
+                    <div class="menu-item">
+                        <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionAlbumes')">
+                            <i class="fas fa-compact-disc"></i>
                         <span>Albums</span>
+                        </div>
+                    </div>  
+                    <div class="menu-item">
+                        <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('')">
+                            <i class="fa-solid fa-users"></i>
+                        <span>Créditos</span>
+                        </div>
                     </div>
-                </div>    
                 </div> 
             </div>
+            
             <div class="seccionIzquierda">  
                 <div class="reproductorMusica">
                     <div id="datosdelReproductor"><!--Aquí poner el reproductor de música-->  
@@ -84,7 +91,7 @@
                     </div>
                 </div>
                 <div id="colaRep">
-                    
+
                 </div>
                 <div class="cuadroMixes" id="contenedorMixesOcultar"> <!--contenedor que incluye las tres recomendaciones principales-->
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
