--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista Inicial</title>
     <link rel="stylesheet" href="../Statics/styles/vistainicial.css">
+    <link rel="stylesheet" href="../Statics/styles/creditos.css">
     <script src="../Dynamics/js/baseDeDatos.js"></script>
     <link rel="icon" href="../Statics/media/imgs/logoTuneSix.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -59,7 +60,7 @@
                         </div>
                     </div>  
                     <div class="menu-item">
-                        <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('')">
+                        <div class="centrarIconosDelHamburgesa" onclick="cambiarDeVista('seccionCreditos')">
                             <i class="fa-solid fa-users"></i>
                         <span>Créditos</span>
                         </div>
@@ -227,6 +228,19 @@
                     </div>
                 </div>
             </div>
+            <!--VISTA DE CRÉDITOS-->
+            <div id="seccionCreditos" class="contenidoDerecho" style="display: none">
+                <div class="alinearCred">
+                  <h1>Créditos Equipo 6</h1>    
+                    <br>
+                    <h3 id="azul" class="parrafo-bonito">Frida Eunice Dávalos Serdán</h3>
+                    <h3 id="blanco" class="parrafo-bonito">Gabriela Abigail Escamilla Flores</h3>
+                    <h3 id="cian" class="parrafo-bonito">Luis Pablo Fernandez Aguirre</h3> 
+                    <h3 id="azul2" class="parrafo-bonito">Lòpez Rosas Hatsi Iain</h3>
+                    <h3 id="blanco2" class="parrafo-bonito">Diana Karen Rivera</h3> 
+                    <h3 id="cian2" class="parrafo-bonito" >Fernando Samuel López Morales</h3>  
+                </div>             
+            </div>    
         </div>
         </div>
     </div>
