--- a/Statics/styles/creditos.css
+++ b/Statics/styles/creditos.css
@@ -18,28 +18,53 @@ button:hover {
       font-size: large;
 }
 .parrafo-bonito {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  line-height: 1.6;
-  color: #5D3A9B; /* morado suave */
-  background-color: #F3E8FF; /* lavanda claro */
-  padding: 20px;
-  border-radius: 15px;
-  box-shadow: 0 4px 15px rgba(93, 58, 155, 0.2); /* sombra morada */
-  max-width: 600px;
-  margin: 40px auto;
-  text-align: center;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    line-height: 1.6;
+    color: #5D3A9B;
+    background-color: #F3E8FF;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(93, 58, 155, 0.2);
+    max-width: 600px;
+    width: 90%;
+    height: 35px;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .parrafo-bonito:hover {
   transform: scale(1.03);
   box-shadow: 0 6px 20px rgba(93, 58, 155, 0.3);
 }
-#luis{
-  color: rgba(95, 11, 11, 0.767);
-  background-color: rgba(231, 49, 49, 0.842);
-}   
-#aby{
-  color:#1c3b32;
-  background-color: #349477;
+#blanco{
+  color:#2c3e50;
+  background-color: #eeeee0;
+}
+#azul{
+  color:white;
+  background-color: #5a6f98;
+}
+#cian{
+  color: white;
+  background-color: #177479;
+}
+#blanco2{
+  color:#2c3e50;
+  background-color: #eeeee0;
+}
+#azul2{
+  color:white;
+  background-color: #5a6f98;
+}
+#cian2{
+  color: white;
+  background-color: #177479;
+}
+.alinearCred{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-content: space-between;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
 }
