Boton añadir a cola en cancion

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -113,20 +113,24 @@
                             <button class="recomendacion">
                                 <img src="../Statics/img/.png" class="item-img">
                                 <p>Recomendación1</p>
+                                <div id="añadirCola">+</div>
                             </button>
                             <button class="recomendacion">
                                 <img src="../Statics/img/.jpg" class="item-img">
                                 <p>Recomendación2</p>
+                                <button>+</button>
                             </button>
                         </div>
                         <div class="dosRec">
                             <button class="recomendacion">
                                 <img src="../Statics/img/.jpg" class="item-img">
                                 <p>Recomendación3</p>
+                                <button>+</button>
                             </button>
                             <button class="recomendacion">
                                 <img src="../Statics/img/.jpg" class="item-img">
                                 <p>Recomendación4</p>
+                                <button>+</button>
                             </button>
                         </div>  
                         <div class="dosRec"><!--contenedor que incluye las recomendaciones de artistas y del álbum-->
