--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -98,8 +98,8 @@
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
-                    <button class="TuMix">Tu Mix</button><br>
-                </div> 
+                </div>
+                    <button class="TuMix" id="tuMix">Tu Mix</button><br>  
             </div>
             <div class="lineaCentral"></div><!--Línea que aparece cerca del centro-->
             
@@ -208,7 +208,21 @@
                     <div id="contenedorDeCancionesMix">
                     </div>  
                 </div>  
-            </div>  
+            </div>
+            <!--TUMIX-->
+            <div id="seccionTuMix" class="contenidoDerecho" style="display: none;">
+                <div class="seccionDerechaMix">
+                    <div id="infoDeTuMix">
+                        <img id="imagendelAlbum">
+                        <div id="infoMix" >
+                            <div id="nombreMix">Tu Mix </div>
+                            <div id="autorAlbum">-Tu</div>
+                        </div>
+                    </div>
+                    <div id="contenedorDeCancionesTuMix">
+                    </div>  
+                </div>  
+            </div>    
             <!--CANCIONESSS-->
             <div id="seccionCanciones" class="contenidoDerecho" style="display: none;">
                 <div class="seccionDerechaCanciones">
