--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -182,6 +182,7 @@ body{
     color: #000000;
 }
 .recomendacionArtista{
+    display: flex;
     width: 235px;
     height: 235px;
     background-color: #eeeeee;
@@ -189,6 +190,8 @@ body{
     text-align: center;
     align-content: center;
     gap:10px;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 .noFormato{
     width: 100%;
@@ -196,12 +199,14 @@ body{
     display: flex;
     border-style: none;
     border: none;
+    border-radius: 7px;
     align-content: center;
     align-items: center;
     justify-content: center;
     justify-self: center;
     align-self: center;
     background-color: none;
+    justify-content: space-evenly;
 }
 .item-img{
   height: 70px;
