--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -11,6 +11,9 @@ body{
     color: white;
     height: 100%;
 }
+.favorita {
+  color: red;
+}
 .contenedorGrandote{
     display: flex;
     width: 100%;
@@ -784,7 +787,7 @@ body{
   margin-top: 8px;
   font-size: 1rem;
 }
-.TuMix{
+#TuMix{
   width: 100%;
   height: 70px;
   color: black;
