--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -114,24 +114,32 @@
                             <button class="recomendacion">
                                 <img src="../Statics/img/.png" class="item-img">
                                 <p>Recomendación1</p>
-                                <div id="añadirCola">+</div>
+                                <div class="añadirCola" title="Añade a Cola">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
                             </button>
                             <button class="recomendacion">
                                 <img src="../Statics/img/.jpg" class="item-img">
                                 <p>Recomendación2</p>
-                                <button>+</button>
+                                <div class="añadirCola" title="Añade a Cola">  
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
                             </button>
                         </div>
                         <div class="dosRec">
-                            <button class="recomendacion">
+                            <button class="recomendacion" title="Añade a Cola">
                                 <img src="../Statics/img/.jpg" class="item-img">
                                 <p>Recomendación3</p>
-                                <button>+</button>
+                                <div class="añadirCola">  
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
                             </button>
-                            <button class="recomendacion">
+                            <button class="recomendacion" title="Añade a Cola">
                                 <img src="../Statics/img/.jpg" class="item-img">
                                 <p>Recomendación4</p>
-                                <button>+</button>
+                                <div class="añadirCola">  
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
                             </button>
                         </div>  
                         <div class="dosRec"><!--contenedor que incluye las recomendaciones de artistas y del álbum-->
