--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -915,3 +915,17 @@ body{
   padding: 10px;
   background-color: rgb(255, 255, 255);
 }
+.añadirCola{
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #75b7bb;
+  border: 1px solid black;
+  border-radius: 20px;
+  cursor: crosshair;
+}
+.añadirCola:hover{
+  transform: scale(1.1);
+}
