boton cerrar sesion

--- a/Templates/vistaperfil.html
+++ b/Templates/vistaperfil.html
@@ -9,7 +9,11 @@
 <body>
     <div class="contenedorPerfil">
         <div class="ladoIzquierdoPerfil">
-            <button id="regresarBtn">Volver al inicio</button>
+            <button id="regresarBtn" class="botonesIzq">Volver al inicio</button>
+            <br>
+            <br>
+            <br>
+            <button id="salirBtn" class="botonesIzq">Cerrar sesión</button>
         </div>
         <div class="ladoDerechoPerfil">
             <div class="fotos">
@@ -37,7 +41,10 @@
                 <p id="descripcionUsuario">Descripción: </p>
                 <p id="correoUsuario">Correo: </p>
             </div>
-        <script src="../Dynamics/js/vistaperfil.js"></script>
+        </div>
     </div>
+    <script src="../Dynamics/js/vistaperfil.js"></script>
+</body>
+</html>
 </body>
 </html>
