--- a/Statics/styles/vistaperfil.css
+++ b/Statics/styles/vistaperfil.css
@@ -1,5 +1,5 @@
-*{
-    cursor: url('../media/imgs/Normal\ Select.cur'), auto;
+* {
+    cursor: url('../media/imgs/Normal-Select.cur'), auto;
 }
 button:hover {
   cursor: pointer;
@@ -10,6 +10,15 @@ body{
     background: radial-gradient(circle, rgba(32, 114, 169, 1) 0%, rgba(38, 26, 71, 1) 100%);
     color: white;
     height: 100%;
+}
+.botonesIzq {
+  background-color: #4da6ff96;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  padding: 12px 24px;
+  font-size: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .contenedorPerfil {
     display: flex;
@@ -67,15 +76,6 @@ body{
     justify-content: center;
     width: 100%;
     margin-top: 20px;
-}
-#regresarBtn{
-background-color: #4da6ff96;
-  color: white;
-  border: none;
-  border-radius: 50px;
-  padding: 12px 24px;
-  font-size: 16px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 #editarPerfil {
     background-color: #5a6f98;
