style: añade diseño a creditos

--- a/Templates/credit.html
+++ b/Templates/credit.html
@@ -55,7 +55,7 @@
                      <h3 id="frida" class="parrafo-bonito">Frida Eunice Dávalos Serdán</h3>
                     <h3 id="aby" class="parrafo-bonito"> Gabriela Abigail Escamilla Flores</h3>
                 <h3 id="luis" class="parrafo-bonito" > Luis Pablo Fernandez Aguirre </h3>
-                 <h3 class ="parrafo-bonito" style="background-color: aqua;"> Lòpez Rosas Hatsi Iain</h3>
+                 <h3 class ="parrafo-bonito" style="background-color: aqua;"> López Rosas Hatsi Iain</h3>
                 <h3 class="parrafo-bonito">Diana Karen Rivera</h3>               
             </div>
         </div>
