--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -239,12 +239,46 @@
                 <div class="alinearCred">
                   <h1>Créditos Equipo 6</h1>    
                     <br>
-                    <h3 id="azul" class="parrafo-bonito">Frida Eunice Dávalos Serdán</h3>
-                    <h3 id="blanco" class="parrafo-bonito">Gabriela Abigail Escamilla Flores</h3>
-                    <h3 id="cian" class="parrafo-bonito">Luis Pablo Fernandez Aguirre</h3> 
-                    <h3 id="azul2" class="parrafo-bonito">Lòpez Rosas Hatsi Iain</h3>
-                    <h3 id="blanco2" class="parrafo-bonito">Diana Karen Rivera</h3> 
-                    <h3 id="cian2" class="parrafo-bonito" >Fernando Samuel López Morales</h3>  
+                    
+                    <a id="azul" class="parrafo-bonito no-link-a cred-nombres" href="https://github.com/Nisi-nice"  title="GitHub: Nisi-nice">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <div>
+                            <h3 class="">Frida Eunice Dávalos Serdán</h3>
+                        </div>
+                    </a>
+                    <a id="blanco" class="parrafo-bonito no-link-a cred-nombres" href="https://github.com/ururawis"  title="GitHub: ururawis">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <div>
+                            <h3 class="">Gabriela Abigail Escamilla Flores</h3>
+                        </div>
+                    </a>
+                    <a id="cian" class="parrafo-bonito no-link-a cred-nombres" href="https://github.com/luisferag117"  title="GitHub: luisferag117">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <div>
+                            <h3 class="">Luis Pablo Fernandez Aguirre</h3> 
+                        </div>
+                    </a>
+                    <a id="azul2" class="parrafo-bonito no-link-a cred-nombres" href="https://github.com/HatsiL-64" title="GitHub: HatsiL-64">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <div>
+                            <h3 class="">López Rosas Hatsi Iain</h3>
+                        </div>
+                    </a>
+                    <a id="blanco2" class="parrafo-bonito no-link-a cred-nombres" href="https://github.com/DKarenR"  title="GitHub: DKarenR">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <div>
+                            <h3 class="">Diana Karen Rivera</h3> 
+                        </div>
+                    </a>
+                    
+                    <br>
+                    <a id="cian2" class="parrafo-bonito no-link-a cred-nombres" href="https://github.com/TheUniqueFersa"  title="GitHub: TheUniqueFersa">
+                        <i class="fa-solid fa-chalkboard-user"></i>
+                        <div>
+                            <h3 id="" class="" >Fernando Samuel López Morales</h3>  
+                        </div>
+                    </a>
+                    
                 </div>             
             </div>    
         </div>
