--- a/Statics/styles/creditos.css
+++ b/Statics/styles/creditos.css
@@ -67,4 +67,20 @@ button:hover {
   justify-content: flex-start;
   flex-direction: column;
   align-items: center;
+  gap: 25px;
+}
+
+.no-link-a{
+  color: black;
+  text-decoration: none;
+}
+
+.cred-nombres{
+  display: flex; 
+  flex-direction:row; 
+  align-items: center; 
+  justify-content: space-between; 
+  padding:20px; 
+  padding-left: 25px; 
+  padding-right: 25px
 }
